gcc/testsuite/rust/rustc/ui/let-else/let-else-if_dg.rs
fn main() {
    let Some(_) = Some(()) else if true {
// { dg-error "" "" { target *-*-* } .-1 }
        return;
    } else {
        return;
    };
}

